--- a/3_semantic_segmentation/DataLoader.ipynb
+++ b/3_semantic_segmentation/DataLoader.ipynb
@@ -3,27 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 패키지 import\n",
     "import os.path as osp\n",
     "from PIL import Image\n",
     "\n",
     "import torch.utils.data as data"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 데이터셋과 데이터 로더 구현\n",
     "## image 데이터 및 어노테이션 데이터 파일의 경로 리스트 작성"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/VOCdevkit/VOC2012/JPEGImages/2007_000032.jpg\n",
+      "./data/VOCdevkit/VOC2012/SegmentationClass/2007_000032.png\n"
+     ]
+    }
+   ],
    "source": [
     "def make_datapath_list(rootpath):\n",
     "    imagepath_template = osp.join(rootpath, \"JPEGImages\", \"%s.jpg\")\n",
@@ -59,29 +70,20 @@
     "train_img_list, train_anno_list, val_img_list, val_anno_list = make_datapath_list(rootpath=rootpath)\n",
     "print(train_img_list[0])\n",
     "print(train_anno_list[0])"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "./data/VOCdevkit/VOC2012/JPEGImages/2007_000032.jpg\n",
-      "./data/VOCdevkit/VOC2012/SegmentationClass/2007_000032.png\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 데이터셋 작성"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from utils.data_augumentation import *\n",
     "\n",
@@ -103,13 +105,21 @@
     "\n",
     "    def __call__(self, phase, img, anno_class_img):\n",
     "        return self.data_transform[phase](img, anno_class_img)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 475, 475])\n"
+     ]
+    }
+   ],
    "source": [
     "class VOCDataset(data.Dataset):\n",
     "    def __init__(self, img_list, anno_list, phase, transform):\n",
@@ -144,28 +154,28 @@
     "val_dataset = VOCDataset(val_img_list, val_anno_list, phase=\"val\", transform=DataTransform(input_size=475, color_mean=color_mean, color_std=color_std))\n",
     "\n",
     "print(val_dataset.__getitem__(0)[0].shape)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "torch.Size([3, 475, 475])\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 데이터 로더 작성"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 3, 475, 475])\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 8\n",
     "\n",
@@ -177,47 +187,57 @@
     "batch_iterator = iter(dataloaders_dict[\"val\"])\n",
     "images, anno_class_images = next(batch_iterator)\n",
     "print(images.size())"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "torch.Size([8, 3, 475, 475])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.utils.data.dataloader.DataLoader"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "type(train_dataloader)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "8713644ccf95bc94f9cdb73f3820952989f55b48f58b1b4cb3d9529941d252d1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.10 64-bit ('tf2.5': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.7.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('tf2.5': conda)"
-  },
-  "interpreter": {
-   "hash": "8713644ccf95bc94f9cdb73f3820952989f55b48f58b1b4cb3d9529941d252d1"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
