--- a/8_nlp_sentiment_bert/bert_base.ipynb
+++ b/8_nlp_sentiment_bert/bert_base.ipynb
@@ -1446,6 +1446,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(num):\n",
+    "    if num == 0 or num == 1:\n",
+    "        return 1\n",
+    "\n",
+    "    return num * factorial(num-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 4 7 2 10 5\n",
+      "4.01314541923899\n",
+      "----------\n",
+      "7 6 1 10 8 5\n",
+      "14.376223409339065\n",
+      "----------\n",
+      "5 9 9 10 5 4\n",
+      "6.175993850620635\n",
+      "----------\n",
+      "0 3 10 9 10 2\n",
+      "9.323807579381203\n",
+      "----------\n",
+      "5 8 0 0 6 7\n",
+      "16.03953513936702\n",
+      "----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "for _ in range(5):\n",
+    " \n",
+    "    ax, ay, bx, by, cx, cy = (random.randint(0,10) for _ in range(6))\n",
+    "    print(ax,ay,bx,by,cx,cy)\n",
+    "    \n",
+    "    pos = [[ax, ay], [bx, by], [cx, cy]]\n",
+    "    pos = sorted(pos, key=lambda x: x[0])\n",
+    "    x_inc = pos[1][0] - pos[0][0]\n",
+    "    y_inc = pos[1][1] - pos[0][1]\n",
+    "    \n",
+    "    if (ax - bx) == (ax - cx) == 0 or (ay - by) == (ay - cy) == 0:\n",
+    "        print(-1.0)\n",
+    "    elif (ay - by) * (ax - cx) == (ay - cy) * (ax - bx):\n",
+    "        print(-1.0)\n",
+    "    else:\n",
+    "        line_1 = sqrt((ay - by) ** 2 + (ax - bx) ** 2)\n",
+    "        line_2 = sqrt((by - cy) ** 2 + (bx - cx) ** 2)\n",
+    "        line_3 = sqrt((cy - ay) ** 2 + (cx - ax) ** 2)\n",
+    "    \n",
+    "        ret_max = max(line_1 + line_2, line_2 + line_3, line_3 + line_1)\n",
+    "        ret_min = min(line_1 + line_2, line_2 + line_3, line_3 + line_1)\n",
+    "        ret = (ret_max - ret_min) * 2\n",
+    "        print(ret)\n",
+    "    print(\"----------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[52, 94, 13]\n",
+      "91\n",
+      "--------\n",
+      "[13, 52, 94, -97, 71, 50]\n",
+      "-24\n",
+      "--------\n",
+      "[-97, 13, 50, 52, 71, 94, 37, -18, 43]\n",
+      "-49\n",
+      "--------\n",
+      "[-97, -18, 13, 37, 43, 50, 52, 71, 94, -57, 10, 71]\n",
+      "-96\n",
+      "--------\n",
+      "[-97, -57, -18, 10, 13, 37, 43, 50, 52, 71, 71, 94, 3, -6, -70]\n",
+      "-83\n",
+      "--------\n",
+      "[-97, -70, -57, -18, -6, 3, 10, 13, 37, 43, 50, 52, 71, 71, 94, -40, 64, -30]\n",
+      "-83\n",
+      "--------\n",
+      "[-97, -70, -57, -40, -30, -18, -6, 3, 10, 13, 37, 43, 50, 52, 64, 71, 71, 94, -3, 73, -7]\n",
+      "-83\n",
+      "--------\n",
+      "[-97, -70, -57, -40, -30, -18, -7, -6, -3, 3, 10, 13, 37, 43, 50, 52, 64, 71, 71, 73, 94, -23, 72, 31]\n",
+      "-83\n",
+      "--------\n",
+      "[-97, -70, -57, -40, -30, -23, -18, -7, -6, -3, 3, 10, 13, 31, 37, 43, 50, 52, 64, 71, 71, 72, 73, 94, -12, -66, -70]\n",
+      "-70\n",
+      "--------\n",
+      "[-97, -70, -70, -66, -57, -40, -30, -23, -18, -12, -7, -6, -3, 3, 10, 13, 31, 37, 43, 50, 52, 64, 71, 71, 72, 73, 94, -64, -18, 39]\n",
+      "-70\n",
+      "--------\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "for _ in range(10):\n",
+    "    for _ in range(3):\n",
+    "        a.append(random.randint(-100,100))\n",
+    "    print(a)\n",
+    "    a.sort()\n",
+    "    if a[1] - a[0] == a[2] - a[1]:\n",
+    "        print(a[2] * 2 - a[1])\n",
+    "    elif a[1] - a[0] > a[2] - a[1]:\n",
+    "        print(a[1] * 2 - a[2])\n",
+    "    else:\n",
+    "        print(a[1] * 2 - a[0])\n",
+    "    print(\"--------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
