kinetic data download

--- a/9_video_classification_eco/9-4_1_kinetics_download_for_python2.ipynb
+++ b/9_video_classification_eco/9-4_1_kinetics_download_for_python2.ipynb
@@ -57,20 +57,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/kinetics/61598a2a-008c-4be8-b905-675577ef7975.%(ext)s\n",
-      "/tmp/kinetics/dda1d025-c5a0-4eaa-a1fa-7741e7b974c2.%(ext)s\n",
-      "/tmp/kinetics/aee74f62-b200-4464-84c0-977f56b48830.%(ext)s\n",
-      "/tmp/kinetics/9aa81f6a-b58c-4eae-8a28-b8a8e0f56f6d.%(ext)s\n",
-      "/tmp/kinetics/1ea6c6cc-0253-4976-a51d-4812e2a61e44.%(ext)s\n",
-      "/tmp/kinetics/9f855b52-7a6f-4781-a53f-a21e7ebbf938.%(ext)s\n",
-      "/tmp/kinetics/bfca0f36-1499-4391-bb63-9f2c84a72d41.%(ext)s\n",
-      "/tmp/kinetics/2c94b95d-14f4-410b-b60c-28834d2a7439.%(ext)s\n"
+      "./tmp/kinetics/3bafddcc-b0dd-4e7c-88b0-b373fc312c18.%(ext)s\n",
+      "./tmp/kinetics/4ffcfa3a-b1a0-4594-904c-34d6788e9535.%(ext)s\n",
+      "./tmp/kinetics/bfd4bfb0-124d-483d-b2c1-0b94a26d8278.%(ext)s\n",
+      "./tmp/kinetics/d424ee27-073d-4304-9283-0932ac6ae0c2.%(ext)s\n",
+      "./tmp/kinetics/24c4cbe6-dfb1-4223-82ae-deb94690ad27.%(ext)s\n",
+      "./tmp/kinetics/f7fd4e34-d68d-42a1-9738-135e315dc277.%(ext)s\n",
+      "./tmp/kinetics/34b2a09a-1160-43a8-8a8c-c443ce887dda.%(ext)s\n",
+      "./tmp/kinetics/3fdef458-ccc5-47db-8567-e1d347d17809.%(ext)s\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "\n",
+    "import joblib\n",
     "# data 폴더가 없으면 작성한다\n",
     "data_dir = \"./data/\"\n",
     "if not os.path.exists(data_dir):\n",
@@ -95,6 +95,11 @@
    "source": [
     "끝"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -106,14 +111,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
