--- a/9_video_classification_eco/9-4_2_convert_mp4_to_jpeg.ipynb
+++ b/9_video_classification_eco/9-4_2_convert_mp4_to_jpeg.ipynb
@@ -23,36 +23,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['arm wrestling', 'bungee jumping']\n",
-      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/BdMiTo_OtnU_000024_000034.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/BdMiTo_OtnU_000024_000034/image_%05d.jpg\"\n",
+      "['bungee jumping', 'arm wrestling']\n",
+      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/68eafb33-743e-4a2e-b5e4-efa8f84ba394.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/68eafb33-743e-4a2e-b5e4-efa8f84ba394/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/5JzkrOVhPOw_000027_000037.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/5JzkrOVhPOw_000027_000037/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/40c7413c-cda1-4e7c-bc53-3b5dc44db082.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/40c7413c-cda1-4e7c-bc53-3b5dc44db082/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/ehLnj7pXnYE_000027_000037.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/ehLnj7pXnYE_000027_000037/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/d02def35-e157-4e36-b58a-bd1a784e1807.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/d02def35-e157-4e36-b58a-bd1a784e1807/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/C4lCVBZ3ux0_000028_000038.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/C4lCVBZ3ux0_000028_000038/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/a9bdfaa1-81de-4bbb-8aac-473c79c1096f.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/a9bdfaa1-81de-4bbb-8aac-473c79c1096f/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/dAeUFSdYG1I_000010_000020.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/dAeUFSdYG1I_000010_000020/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/98306750-9046-4363-8152-b133f9f1fa27.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/98306750-9046-4363-8152-b133f9f1fa27/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/zkXOcxGnUhs_000025_000035.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/zkXOcxGnUhs_000025_000035/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/175341b5-7661-4250-b453-ca7d6c4388d7.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/175341b5-7661-4250-b453-ca7d6c4388d7/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/TUvSX0pYu4o_000002_000012.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/TUvSX0pYu4o_000002_000012/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/bf4d2a40-9070-4cba-8016-5a53f662098c.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/bf4d2a40-9070-4cba-8016-5a53f662098c/image_%05d.jpg\"\n",
       "\n",
       "\n",
-      "ffmpeg -i \"./data/kinetics_videos/bungee jumping/b6yQZjPE26c_000023_000033.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/bungee jumping/b6yQZjPE26c_000023_000033/image_%05d.jpg\"\n",
+      "ffmpeg -i \"./data/kinetics_videos/arm wrestling/0e332c9e-8d6d-4360-9e5d-5f821df91596.mp4\" -vf scale=-1:256 \"./data/kinetics_videos/arm wrestling/0e332c9e-8d6d-4360-9e5d-5f821df91596/image_%05d.jpg\"\n",
       "\n",
       "\n",
       "동영상 파일을 화상 파일로 변환했습니다.\n"
@@ -66,7 +66,7 @@
     "\n",
     "# 동영상이 저장된 \"kinetics_videos\"폴더에 있는, 클래스의 종류와 경로를 취득\n",
     "dir_path = './data/kinetics_videos'\n",
-    "class_list = os.listdir(path=dir_path)\n",
+    "class_list = os.listdir(dir_path)\n",
     "print(class_list)\n",
     "\n",
     "# 각 클래스의 동영상 파일을 화상 파일로 변환한다\n",
@@ -123,14 +123,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
