--- a/9_video_classification_eco/ECO.ipynb
+++ b/9_video_classification_eco/ECO.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        ")"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,9 +355,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/plass-heesu/.conda/envs/tf2.5/lib/python3.7/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorboardX import SummaryWriter\n",
     "\n",
@@ -366,6 +375,206 @@
     "dummy_img = torch.rand(batch_size,3,224,224)\n",
     "writer.add_graph(net, (dummy_img, ))\n",
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3D Net 모듈(3DCNN) 구현\n",
+    "## Resnet_3D_3 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Resnet_3D_3(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Resnet_3D_3, self).__init__()\n",
+    "\n",
+    "        self.res3a_2 = nn.Conv3d(96,128, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "        self.res3a_bn = nn.BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res3a_relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        self.res3b_1 = nn.Conv3d(128, 128, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "        self.res3b_1_bn = nn.BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res3b_1_relu = nn.ReLU(inplace=True)\n",
+    "        self.res3b_2 = nn.Conv3d(128, 128, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "        \n",
+    "        self.res3b_bn = nn.BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res3b_relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        residual = self.res3a_2(x)\n",
+    "        out = self.res3a_bn(residual)\n",
+    "        out = self.res3a_relu(out)\n",
+    "\n",
+    "        out = self.res3b_1(out)\n",
+    "        out = self.res3b_1_bn(out)\n",
+    "        out = self.res3b_relu(out)\n",
+    "        out = self.res3b_2(out)\n",
+    "\n",
+    "        out += residual\n",
+    "\n",
+    "        out = self.res3b_bn(out)\n",
+    "        out = self.res3b_relu(out)\n",
+    "\n",
+    "        return out\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resnet_3D_4 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Resnet_3D_4(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Resnet_3D_4, self).__init__()\n",
+    "\n",
+    "        self.res4a_1 = nn.Conv3d(128,256, kernel_size=(3,3,3), stride=(2,2,2), padding=(1,1,1))\n",
+    "        self.res4a_1_bn = nn.BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res4a_1_relu = nn.ReLU(inplace=True)\n",
+    "        self.res4a_2 = nn.Conv3d(256,256,kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "        self.res4a_down = nn.Conv3d(128,256,kernel_size=(3,3,3), stride=(2,2,2), padding=(1,1,1))\n",
+    "\n",
+    "        self.res4a_bn = nn.BatchNorm3d(256,eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res4a_relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        self.res4b_1 = nn.Conv3d(256,256, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "        self.res4b_1_bn = nn.BatchNorm3d(256,eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res4b_1_relu = nn.ReLU(inplace=True)\n",
+    "        self.res4b_2 = nn.Conv3d(256,256, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "\n",
+    "        self.res4b_bn = nn.BatchNorm3d(256,eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res4b_relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        residual = self.res4a_down(x)\n",
+    "        out = self.res4a_1(x)\n",
+    "        out = self.res4a_1_bn(out)\n",
+    "        out = self.res4a_1_relu(out)\n",
+    "\n",
+    "        out = self.res4a_2(out)\n",
+    "        out += residual\n",
+    "\n",
+    "        residual2 = out\n",
+    "\n",
+    "        out = self.res4a_bn(out)\n",
+    "        out = self.res4a_relu(out)\n",
+    "\n",
+    "        out = self.res4b_1(out)\n",
+    "        out = self.res4b_1_bn(out)\n",
+    "        out = self.res4b_1_relu(out)\n",
+    "\n",
+    "        out = self.res4b_2(out)\n",
+    "\n",
+    "        out += residual2\n",
+    "\n",
+    "        out = self.res4b_bn(out)\n",
+    "        out = self.res4b_relu(out)\n",
+    "\n",
+    "        return out\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resnet_3D_5 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Resnet_3D_5(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Resnet_3D_5, self).__init__()\n",
+    "\n",
+    "        self.res5a_1 = nn.Conv3d(256,512, kernel_size=(3,3,3), stride=(2,2,2), padding=(1,1,1))\n",
+    "        self.res5a_1_bn = nn.BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res5a_1_relu = nn.ReLU(inplace=True)\n",
+    "        self.res5a_2 = nn.Conv3d(512,512,kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "\n",
+    "        self.res5a_down = nn.Conv3d(256,512,kernel_size=(3,3,3), stride=(2,2,2), padding=(1,1,1))\n",
+    "\n",
+    "        self.res5a_bn = nn.BatchNorm3d(512,eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res5a_relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        self.res5b_1 = nn.Conv3d(512,512, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "        self.res5b_1_bn = nn.BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res5b_1_relu = nn.ReLU(inplace=True)\n",
+    "        self.res5b_2 = nn.Conv3d(512,512, kernel_size=(3,3,3), stride=(1,1,1), padding=(1,1,1))\n",
+    "\n",
+    "        self.res5b_bn = nn.BatchNorm3d(512,eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.res5b_relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        residual = self.res5a_down(x)\n",
+    "\n",
+    "        out = self.res5a_1(x)\n",
+    "        out = self.res5a_1_bn(out)\n",
+    "        out = self.res5a_1_relu(out)\n",
+    "\n",
+    "        out = self.res5a_2(out)\n",
+    "        out += residual\n",
+    "\n",
+    "        residual2 = out\n",
+    "        out = self.res5a_bn(out)\n",
+    "        out = self.res5a_relu(out)\n",
+    "\n",
+    "        out = self.res5b_1(out)\n",
+    "        out = self.res5b_1_bn(out)\n",
+    "\n",
+    "        out = self.res5b_1_relu(out)\n",
+    "        out = self.res5b_2(out)\n",
+    "\n",
+    "        out = self.res5b_bn(out)\n",
+    "        out = self.res5b_relu(out)\n",
+    "\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ECO_3D(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ECO_3D, self).__init__()\n",
+    "\n",
+    "        self.res_3d_3 = Resnet_3D_3()\n",
+    "        self.res_3d_4 = Resnet_3D_4()\n",
+    "        self.res_3d_5 = Resnet_3D_5()\n",
+    "\n",
+    "        self.global_pool = nn.AvgPool3d(kernel_size=(4,7,7), stride=1, padding=0)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = torch.transpose(x,1,2)\n",
+    "        out = self.res3d3(out)\n",
+    "        out = self.res_3d_4(out)\n",
+    "        out = self.res_3d_5(out)\n",
+    "        out = self.global_pool(out)\n",
+    "\n",
+    "        out = out.view(out.size()[0], out.size()[1])\n",
+    "\n",
+    "        return out"
    ]
   },
   {
